--- a/application/index.html
+++ b/application/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <p>Demo heel team</P>
 
 </body>
