--- a/application/index.html
+++ b/application/index.html
@@ -5,6 +5,7 @@
 <h1>My First Heading</h1>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
+<img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 
 </body>
 </html>
