--- a/application/index.html
+++ b/application/index.html
@@ -36,6 +36,8 @@
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
+<img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
+
 
 
 
