--- a/application/index.html
+++ b/application/index.html
@@ -37,6 +37,7 @@
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
+<img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 
 
 
