--- a/application/index.html
+++ b/application/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
@@ -48,6 +48,7 @@
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <p>final test</p>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
+
 
 
 
