--- a/application/index.html
+++ b/application/index.html
@@ -3,6 +3,7 @@
 <body>
 
 <img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
+<img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
 <img src="https://media.giphy.com/media/3oz8xRF0v9WMAUVLNK/giphy.gif"/>
