--- a/application/index.html
+++ b/application/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
 <img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
 <img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
 <img src="https://media.giphy.com/media/Xs1ynN4eSAuxhTXmcK/giphy.gif"/>
