--- a/application/index.html
+++ b/application/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Does it work?</h1>
+<h1>Does it work??</h1>
 <img src="https://media.giphy.com/media/l2JhIUyUs8KDCCf3W/giphy.gif">
 </body>
 </html>
